--- a/mis42p2rd484215.csproj
+++ b/mis42p2rd484215.csproj
@@ -171,16 +171,20 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="DAL\Context.cs" />
+    <Compile Include="DAL\SD2Context.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\keyAttribute.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Orders.cs" />
+    <Compile Include="Models\Pets.cs" />
     <Compile Include="Models\Products.cs" />
+    <Compile Include="Models\Vet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
