--- a/mis42p2rd484215.csproj
+++ b/mis42p2rd484215.csproj
@@ -168,10 +168,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AppointmentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\PetsController.cs" />
-    <Compile Include="Controllers\VetsController.cs" />
+    <Compile Include="Controllers\PettsController.cs" />
+    <Compile Include="Controllers\VettsController.cs" />
     <Compile Include="DAL\Context.cs" />
     <Compile Include="DAL\SD2Context.cs" />
     <Compile Include="Global.asax.cs">
@@ -179,16 +180,16 @@
     </Compile>
     <Compile Include="Migrations\MISContext\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\keyAttribute.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Orders.cs" />
-    <Compile Include="Models\Pets.cs" />
+    <Compile Include="Models\Petts.cs" />
     <Compile Include="Models\Products.cs" />
-    <Compile Include="Models\Vet.cs" />
-    <Compile Include="Models\VetPets.cs" />
+    <Compile Include="Models\Vett.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -258,6 +259,26 @@
     <Content Include="Views\Vets\Details.cshtml" />
     <Content Include="Views\Vets\Edit.cshtml" />
     <Content Include="Views\Vets\Index.cshtml" />
+    <Content Include="Views\VetPets\Create.cshtml" />
+    <Content Include="Views\VetPets\Delete.cshtml" />
+    <Content Include="Views\VetPets\Details.cshtml" />
+    <Content Include="Views\VetPets\Edit.cshtml" />
+    <Content Include="Views\VetPets\Index.cshtml" />
+    <Content Include="Views\Appointments\Create.cshtml" />
+    <Content Include="Views\Appointments\Delete.cshtml" />
+    <Content Include="Views\Appointments\Details.cshtml" />
+    <Content Include="Views\Appointments\Edit.cshtml" />
+    <Content Include="Views\Appointments\Index.cshtml" />
+    <Content Include="Views\Vetts\Create.cshtml" />
+    <Content Include="Views\Vetts\Delete.cshtml" />
+    <Content Include="Views\Vetts\Details.cshtml" />
+    <Content Include="Views\Vetts\Edit.cshtml" />
+    <Content Include="Views\Vetts\Index.cshtml" />
+    <Content Include="Views\Petts\Create.cshtml" />
+    <Content Include="Views\Petts\Delete.cshtml" />
+    <Content Include="Views\Petts\Details.cshtml" />
+    <Content Include="Views\Petts\Edit.cshtml" />
+    <Content Include="Views\Petts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
